feat(kernel): annotate implemented interfaces on "ObjRef"s (#825)
* feat: annotate implemented interfaces on "ObjRef"s

Annotating the interfaces implemented by an object instance with the
outbound Object Reference, and allowing the kernel's "create" call to
receive a list of interfaces allows the kernel to use more run-time type
information and operate safer.

* WIP

* WIP progress

* finished fixing java

* fixup regression test expectations

* fix python runtime

* fixup licensing info in NuGet packages

* improve NuGet package metadata

* fix dotnet runtime

* fixup unit tests

* minor style fixes

* some minor tuning

* fixup expecations

* stop using deprecated API

* add some test coverage

* fix test I forgot to update as I changed the code